# libict-openssl

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  build.bsh  configure.sh  do-all.sh
.github/workflows/: cmake-single-platform.yml
source/: .gitignore  CMakeLists.txt  all.sh  cipher.cpp  cipher.hpp  cipher.md  hash.cpp  hash.hpp  hash.md  info.sh  local.h  padding.cpp  padding.hpp  string.hpp  test.cpp  test.hpp  toolchain.cmake
